# CRPTBacktest

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/: simulation_test_quotes_0.csv  simulation_test_trades_0.csv  simulation_test_trades_1.csv  simulation_test_trades_2.csv  simulation_test_trades_3.csv  simulation_test_trades_4.csv  simulation_test_trades_5.csv  simulation_test_trades_6.csv
examples/python/: SamplePythonStrategies.ipynb
python/: PyStrategy.py  Untitled.ipynb  pyproject.toml  setup.py  temp.py  tests.py
python/.virtual_documents/PyStrategy/: MarketMaking.ipynb  Untitled.ipynb
python/PyStrategy/: MarketMaking.ipynb  PyStrategy.py
python/PyStrategy/.ipynb_checkpoints/: MarketMaking-checkpoint.ipynb  Untitled-checkpoint.ipynb
python/PyStrategy/.virtual_documents/: Testing.ipynb  Untitled.ipynb  Untitled1.ipynb
src/: definitions.h  main.cpp
src/convenience/: clickhouse.hpp  python_simulator.cpp
src/core/: entity.hpp  market_data_simulation_manager.hpp  order_execution_manager.hpp  simulation.hpp
src/examples/: market_making.cpp  pnd_quoter.cpp
src/utils/: circular_buffer.hpp  helpers.hpp
tests/: circular_buffer.hpp  clickhouse_fetcher.hpp  market_data_simulation_manager.hpp  order_execution_manager.hpp  simulation.hpp  tests.cpp
